fixed overflow
fixed overflow

--- a/index.css
+++ b/index.css
@@ -431,3 +431,12 @@ body {
         overflow-x: hidden;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .rightPartPromo {
+        border: 2px solid red;
+        overflow: hidden;
+    }
+}
+
+
